--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,7 @@
 [[plugins]]
   # Installs the Lighthouse Build Plugin for all deploy contexts
   package = "@netlify/plugin-lighthouse"
+
+[[plugins]]
+  package = "@netlify/plugin-emails"
+  
