--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
         "less": "^4.1.3",
         "less-watch-compiler": "^1.16.3",
         "npm-run-all": "^4.1.5"
-    }
+    },
+    "feed": {
+		"subtitle": "Tech posts to educate, elevate, but mostly entertain.",
+		"filename": "feed.xml",
+		"path": "/feed/feed.xml",
+		"url": "https://murrietatherapy.com/feed/feed.xml",
+		"id": "https://murrietatherapy.com/"
+    }    
+    
 }
