--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
         "less": "^4.1.3",
         "less-watch-compiler": "^1.16.3",
         "npm-run-all": "^4.1.5"
-    },
-    "feed": {
+    }
+}
+{
+	"feed": {
 		"subtitle": "Tech posts to educate, elevate, but mostly entertain.",
 		"filename": "feed.xml",
 		"path": "/feed/feed.xml",
-		"url": "https://murrietatherapy.com/feed/feed.xml",
-		"id": "https://murrietatherapy.com/"
-    }    
-    
-}
+		"url": "https://conr.dev/feed/feed.xml",
+		"id": "https://conr.dev/"
+	},
+},
